# FontMapster

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests-macos.yml  tests-ubuntu.yml  tests-windows.yml
fontmapster/: __init__.py  main.py
fontmapster/common/: typevars.py  utils.py
tests/: __init__.py  test_normal.py  test_ocr.py
tests/test_common/: test_common_utils.py
